--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>spring-jdbc</artifactId>
             <version>6.0.13</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>6.0.13</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.thymeleaf</groupId>
@@ -98,8 +105,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
